sventon change history
-----------------------------------------------------------------------------------------

[513] Release 1.0 RC3 (2006-04-16)
[509] Fixed: Bug #7136 - The path link contains Chinese still doesn't work.
[501] Added: Upgraded to JavaSVN 1.0.4.
[499] Fixed: Bug #7000 - Chinese characters in file name doesn't work.

[496] Release 1.0 RC2 (2006-04-02)
[477] Added: Possibility to diff entries in browser and search result view.
[468] Added: Feature #1871 - Possibility to disable index.
[465] Added: Upgraded to JHighlight 1.0.
[450] Fixed: Flatten and search buttons are now disabled if not browsing HEAD.
[449] Fixed: Bug #6705 and #6374.
[444] Added: Feature #1867 - Raw file view.

[433] Release 1.0 RC1 (2006-02-14)
[423] Added: Upgraded to JavaSVN 1.0.3.
[408] Fixed: Renamed 'default-sventon.properties' to 'sventon.properties.
[398] Fixed: Bug #5662 - Uncaught exceptions causes stack trace on screen
[397] Added: Feature #1685 - Background index population.
[394] Added: Upgraded to Spring 1.2.6
[373] Added: Display of all current locks, recursively.
[365] Added: Upgraded to JavaSVN 1.0.2.
[356] Added: File lock display in browser view.
[350] Fixed: Removed mount point feature (too much pain, not enough gain).
[348] Added: Latest commit info stays visible when following a link from it.
[346] Fixed: RSS item layout.
[344] Added: Repository changes now published as an RSS feed.
[341] Added: Upgraded to JavaSVN 1.0.1.
[338] Added: More validation during configuration.
[336] Fixed: Revision changes are now sorted before applied to index.
[336] Fixed: Index is not stored to disk if empty.

[334] Release 0.9.2 (2005-12-18)
[328] Fixed: Bug #5884 - Index update fails when adding or removing directories.
[328] Added: Index is now written to disk directly after update.

[324] Release 0.9.1 (2005-12-11)
[318] Added: Default property values to get rid of empty default-sventon.properties.
[313] Fixed: Bug #5847 - Index update fails when files are removed.