@@ -1,6 +1,9 @@
 sventon change history
 -----------------------------------------------------------------------------------------
 
+[520] Fixed: Bug #7229 - Latest commit info not shown.
+[519] Fixed: Bug #7230 - Wrong revision in links from 'latest commit info' box.
+
 [513] Release 1.0 RC3 (2006-04-16)
 [509] Fixed: Bug #7136 - The path link contains Chinese still doesn't work.
 [501] Added: Upgraded to JavaSVN 1.0.4.
